[gd_scene load_steps=5 format=3 uid="uid://leqipm8owfgk"]

[ext_resource type="Script" uid="uid://dyggvqb56jmqh" path="res://scripts/DraftBenchScene.gd" id="1_m0f0g"]
[ext_resource type="PackedScene" uid="uid://canx4b4pr7n3c" path="res://prefabs/BallPlayerCard.tscn" id="2_xv45b"]
[ext_resource type="PackedScene" uid="uid://bm8fw1micckc0" path="res://prefabs/BPCardPreview.tscn" id="3_ifwci"]
[ext_resource type="PackedScene" uid="uid://bqsbslbokh8g4" path="res://prefabs/LineupPreview.tscn" id="4_m5ybp"]

[node name="DraftBenchScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m0f0g")
bp_card_scene = ExtResource("2_xv45b")
bp_card_preview_scene = ExtResource("3_ifwci")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -73.0
offset_top = 10.0
offset_right = 73.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Select Your Bench"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(2.08165e-12, 450)
layout_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 450)
layout_mode = 2
vertical_scroll_mode = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="CardCostTooHigh" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 423.0
offset_right = 1350.0
offset_bottom = 446.0
text = "Card cost too high!"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -43.0
offset_right = 59.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Continue"

[node name="ViewLineup" type="Button" parent="."]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 130.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 20
text = "View Lineup"

[node name="PlayerCostTotal" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 33.0
grow_horizontal = 0
text = "Total: 0/3000"

[node name="LineupPreview" parent="." instance=ExtResource("4_m5ybp")]
visible = false
layout_mode = 1
